# aveuiller.github.io

./: .gitignore  Makefile  README.md  Reducing-System-Design-Anxiety-Part-2--Define-Features-Contracts-and-Metrics.html  Reducing-System-Design-Anxiety-Part-3-Showcase-of-Basic-Architectures.html  about_design_patterns-dependency_injection.html  ads.txt  archives.html  authors.html  categories.html  index.html  introduction_to_flaky_tests_by_example.html  is_copilot_a_threat.html  kafka_apprentice_cookbook.html  kubernetes_apprentice_cookbook.html  left_sidebar.html  package-lock.json  pelicanconf.py  publishconf.py  pyproject.toml  reducing-Software-Design-Anxiety-Part-1-Introduction-to-System-Design.html  right_sidebar.html  search.html  spring_boot_apprentice_cookbook.html  tags.html  troubleshooting_generic_approach.html
author/: antoine-veuiller.html
category/: around-computer-science.html  software-engineering.html
drafts/: Reducing-System-Design-Anxiety-Part-2--Define-Features-Contracts-and-Metrics.html  Reducing-System-Design-Anxiety-Part-3-Showcase-of-Basic-Architectures.html  reducing-Software-Design-Anxiety-Part-1-Introduction-to-System-Design.html
feeds/: all.atom.xml  around-computer-science.atom.xml  software-engineering.atom.xml
pages/: about-me.html  collaborations.html
tag/: best-practice.html  best-practices.html  cheat-sheet.html  cloud.html  dependency-injection.html  design-patterns.html  devops.html  java.html  kafka.html  kubernetes.html  showerthoughs.html  software-architecture.html  spring-boot.html  system-design.html  testing.html  (+1 more)
(+30 files in other folders)
