[tool.poetry]
name = "blog"
version = "1.0.0"
description = "Antoine Veuiller's blog."
authors = ["Antoine Veuiller <aveuiller@gmail.com>"]
homepage = 'https://aveuiller.github.io'
repository = 'https://github.com/aveuiller/aveuiller.github.io'

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pelican = {extras = ["Markdown"], version = "^4.8.0"}
plumage = {git = "https://github.com/kdeldycke/plumage.git", branch = "main"}
pymdown-extensions = "^8.1"
typogrify = "^2.0.7"
pelican-neighbors = "^1.2.0"
pelican-syntax-highlighting = "^0.4.2"

#TODO: dev deps
#pymarkdownlnt = "0.9.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
